validations and corrections in controllers to be consistent with the changes in the DB
