# swagger.json
@@ -71,7 +71,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "breakfast_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -94,8 +94,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -147,7 +150,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "breakfast_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -170,8 +173,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -195,8 +198,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -237,7 +240,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "lunch_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -260,8 +263,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -313,7 +319,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "lunch_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -336,8 +342,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -361,8 +367,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -403,7 +409,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "dinner_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -426,8 +432,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -479,7 +488,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "dinner_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -502,8 +511,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -527,8 +536,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -569,7 +578,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "dessert_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -598,8 +607,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -651,7 +663,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "dessert_type": {
+                "main_dish": {
                   "example": "any"
                 },
                 "item_1": {
@@ -680,8 +692,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -705,8 +717,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
